--- a/playground/assets/css/style.css
+++ b/playground/assets/css/style.css
@@ -1,16 +1,42 @@
-body {
-    background-color: #1e1e1e;
-    color: #ffffff;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding: 20px;
+.navbar {
+    position: relative;
+    background-color: var(--bs-gray-900);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
 
-h1 {
-    color: #ffcc00;
+.navbar::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to right, #4F5B93, #8892BF);
+    opacity: 0.4;
+}
+
+/* link styles */
+.nav-link {
+    color: var(--bs-light);
+    transition: all 0.3s ease-in-out;
+}
+
+/* update text color on hover */
+.nav-link:hover,
+.nav-link:active {
+    color: #8892BF;
+}
+
+#editor-container {
+    /* TODO how to make this responsive?
+       and dont let editor-header overflow when the screen is too small? */
+    min-width: 1550px; /* protect the editor from being too small */
 }
 
 #editor {
+    font-family: 'Jetbrains Mono', Consolas, Monaco, monospace;
+    font-size: 0.9em;
     width: 100%;
     height: 300px;
     border: 1px solid #444;
@@ -18,6 +44,15 @@ h1 {
     color: #ffffff;
     padding: 10px;
     text-align: left;
+    min-width: 100%;
+}
+
+#php-version-display {
+    min-width: 150px;
+}
+
+#performance-display {
+    min-width: 150px;
 }
 
 .CodeMirror {
@@ -26,35 +61,11 @@ h1 {
     text-align: left;
 }
 
-#run {
-    background-color: #ffcc00;
-    color: #1e1e1e;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-#run:hover {
-    background-color: #e6b800;
-}
-
 #output {
+    font-family: 'Jetbrains Mono', Consolas, Monaco, monospace;
+    font-size: 0.9em;
     background-color: #333;
     color: #ffffff;
-    border: 1px solid #444;
-    padding: 10px;
-    margin-top: 10px;
     text-align: left;
     white-space: pre-wrap;
-}
-
-/* Ensure full height */
-#editor-container {
-    height: calc(100vh - 56px); /* avoid navbar overlap */
-    padding-top: 56px; /* Offset the fixed navbar height */
-}
-
-#left, #right {
-    height: 100%;
 }
