--- a/playground/assets/css/style.css
+++ b/playground/assets/css/style.css
@@ -1,4 +1,3 @@
-
 :root {
     --bs-gray-900: #212529;
     --bs-gray-800: #343a40;
@@ -91,3 +90,17 @@
     max-height: fit-content;
     max-width: fit-content;
   }
+
+#editor-statusbar {
+    background-color: #23272b;
+    color: #fff;
+    border-top: 1px solid #444;
+    font-family: 'Jetbrains Mono', Consolas, Monaco, monospace;
+    font-size: 0.95em;
+    min-height: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+}
